2001-07-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (medianFilterImage): Changed argument from
 	unsigned int to const double.

	* lib/Magick++/Image.h (edge): Change argument from unsigned int to double.
	(medianFilter): Changed argument from unsigned int to const double.

	* lib/Magick++/STL.h (edgeImage): Change argument from unsigned int to double.

	* demo/demo.cpp (main): Updated to match PerlMagick demo.

2001-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (shaveImage): New function to shave edges from image.

	* lib/Image.cpp (shave): New method to shave edges from image.

2001-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (quantize): Remove conditions on whether
 	quantization should be done.  Now quantization is always done.

2001-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Image.h (blur,charcoal,emboss,sharpen): Changed
 	radius and sigma parameters to match current ImageMagick defaults.

2001-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Options.cpp (updateDrawInfo): The updateDrawInfo() method
 	was no longer needed.  Due to ImageMagick changes, calling it was
 	causing some options to be lost.

2001-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (fillRule): New method to specify the rule to use when filling drawn objects.  Still needs documentation!

2001-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (erase): New method to reset image to background
 	color.
	(strokeAntiAlias): New method to control antialiasing of stroked
 	objects.

2001-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (channel): Renamed method from 'layer' to match
 	equivalent change in ImageMagick (ChannelImage).  Enumeration
 	names *Layer renamed to *Channel.

2001-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Montage.h (strokeColor): New method.