@@ -1,10 +1,12 @@
 This file records noteworthy changes in Magick++.  As of Magick++ 5.2.3,
 Magick++ release numbering tracks ImageMagick release numbering so the
 Magick++ release number increments even if there are no changes associated
-with Magick++.
+with Magick++ itself.
 
 (5.3.6)
-  * No changes.
+  * Adjusted parameters to 'edge' and 'medianFilter' to match
+    equivalent libMagick functions.
+  * Magick++ demo output looks like PerlMagick demo output again.
 
 (5.3.5)
   * Default radius and sigma parameters were changed on the blur,
